<resources>
    <string name="app_name">Passrithm</string>
    <string name="title_password">비밀번호 리스트</string>
    <string name="title_algorithm">알고리즘 리스트</string>
    <string name="title_mypage">mypage</string>
    <string name="test_string">테스트 스트링입니다. 나중에 삭제해주세요.</string>
    <string name="insert_site">사이트 주소를 입력해주세요.</string>
    <string name="save">저장</string>
    <string name="confirm">확인</string>
    <string name="password_result">결과 : </string>
    <string name="big_letter">대문자 넣기</string>
    <string name="ask_big_letter">몇번째 글자를 대문자로\n수정하시겠습니까?</string>
    <string name="modify_direct">직접 수정하기</string>
    <string name="save_excel">엑셀 파일로 저장</string>
    <string name="save_txt">txt 파일로 저장</string>
    <string name="save_image">이미지 파일로 저장</string>
    <string name="select_letter">영어 문자를 선택해주세요.</string>
    <string name="share_id">비밀번호를 공유하고 싶은 \n 사람의 email를 입력하세요.</string>
    <string name="share_accept">비밀번호 공유를 수락하시겠습니까?</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_list">비밀번호 리스트</string>
</resources>