<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_password">

    <fragment
        android:id="@+id/navigation_password"
        android:name="com.example.passrithm.controller.pwlist.PasswordListFragment"
        android:label="@string/title_password"
        tools:layout="@layout/fragment_password_list"/>

    <fragment
        android:id="@+id/navigation_algorithm"
        android:name="com.example.passrithm.controller.algoritmlist.AlgorithmListFragment"
        android:label="@string/title_algorithm"
        tools:layout="@layout/fragment_algorithm_list" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.example.passrithm.ui.notifications.NotificationsFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/activity_mypage" />
</navigation>