<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:focusable="true" >
    <TextView
        android:id="@+id/last_revision_save_tv"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/save_box"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:id="@+id/last_revision_result_result_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_result"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_alignLeft="@id/last_revision_result_box"
        android:layout_alignTop="@id/last_revision_result_box"
        android:layout_alignBottom="@id/last_revision_result_box"
        android:layout_marginStart="20dp"
        />

    <EditText
        android:id="@+id/last_revision_result_string_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_string"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@id/last_revision_result_result_tv"
        android:layout_alignTop="@id/last_revision_result_result_tv"
        android:layout_alignBottom="@id/last_revision_result_result_tv"
        android:enabled="false"
        />

    <TextView
        android:id="@+id/last_revision_result_box"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/last_revision_save_tv"
        android:background="@drawable/rectangle"/>

    <TextView
        android:id="@+id/last_revision_big_letter_tv"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/big_letter"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/blue_rounding_box"
        android:layout_alignStart="@id/last_revision_result_box"
        android:layout_below="@id/last_revision_result_box"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/last_revision_modify_direct_tv"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/modify_direct"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/blue_rounding_box"
        android:layout_alignEnd="@id/last_revision_result_box"
        android:layout_below="@id/last_revision_result_box"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/last_revision_modify_direct_confirm_tv"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@drawable/blue_rounding_box"
        android:backgroundTint="@color/insert_box_red"
        android:layout_alignEnd="@id/last_revision_result_box"
        android:layout_below="@id/last_revision_modify_direct_tv"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/last_revision_big_letter_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/last_revision_modify_direct_tv"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:visibility="gone"
        android:padding="20dp">
        <!-- 대문자 상자는 visible / invisible 으로 변경한다. -->
        <TextView
            android:id="@+id/last_revision_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_big_letter"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="bottom">
            <EditText
                android:id="@+id/last_revision_et"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:background="@drawable/rectangle"
                android:inputType="numberDecimal"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="번째"/>


        </LinearLayout>
        <TextView
            android:id="@+id/last_revision_alert_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_letter"
            android:visibility="invisible"
            android:textColor="@color/red"
            />
        <TextView
            android:id="@+id/last_revision_big_letter_bt"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="@drawable/insert_box"
            android:layout_marginTop="10dp"
            android:text="@string/confirm"
            />
    </LinearLayout>
</RelativeLayout>