<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/algorithm_maker_main_frm"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    >

    <TextView
        android:id="@+id/algomake_result_background"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/two_level_gray"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/algomake_result_result_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_result"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_alignLeft="@id/algomake_result_background"
        android:layout_alignTop="@id/algomake_result_background"
        android:layout_alignBottom="@id/algomake_result_background"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/algomake_result_string_tv"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/test_string"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_toRightOf="@id/algomake_result_result_tv"
        android:layout_alignTop="@id/algomake_result_background"
        android:layout_alignBottom="@id/algomake_result_background"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/algomake_chosen_algorithm_rc"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/algomake_result_background"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_chosen_algorithm">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/algomake_box_tv"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="알고리즘 선택"
        android:textSize="16sp"
        android:layout_below="@id/algomake_save_tv"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/one_level_gray"/>

    <TextView
        android:id="@+id/algomake_save_tv"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/save_box"
        android:layout_below="@id/algomake_chosen_algorithm_rc"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:id="@+id/algomake_box_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/algomake_box_tv"
        android:layout_alignParentBottom="true"
        android:background="@color/one_level_gray"
        tools:listitem="@layout/item_algorithm_box"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/algomake_box_rc"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/algomake_box_tv"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:background="@color/one_level_gray"
        tools:listitem="@layout/item_algorithm_box">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/algomake_site_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#77000000">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_site"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/algomake_site_input_et"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/algomake_site_input_bt"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="입력"
                    android:gravity="center"
                    android:background="@color/insert_box_red"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>